# logicOps

./: CMakeLists.txt  binary_check.cxx  check.cxx  itkBinaryAndImageFilter.h  itkBinaryNotImageFilter.h  itkBinaryOrImageFilter.h  itkBinaryXorImageFilter.h  itkEqualImageFilter.h  itkGreaterEqualImageFilter.h  itkGreaterImageFilter.h  itkLessEqualImageFilter.h  itkLessImageFilter.h  itkNotEqualImageFilter.h
Wrapping/: wrap_itkBinaryAndImageFilter.cmake  wrap_itkBinaryOrImageFilter.cmake  wrap_itkBinaryXorImageFilter.cmake  wrap_itkEqualImageFilter.cmake  wrap_itkGreaterEqualImageFilter.cmake  wrap_itkGreaterImageFilter.cmake  wrap_itkLessEqualImageFilter.cmake  wrap_itkLessImageFilter.cmake  wrap_itkNotEqualImageFilter.cmake
article/: Article.tex  Makefile
